# Week7_version2

./: .gitmodules  mydiagram.puml
Week7/cmake-variant/: CMake (копия).txt  CMakeLists.txt  file
Week7/cmake-variant/include/: fibonacci.h
Week7/cmake-variant/src/: fibonacci.cpp  main.cpp
Week7/gradle-variant/: settings.gradle  settings.gradle.kts
Week7/gradle-variant/app/src/main/cpp/: fibonacci.cpp  main.cpp
Week7/gradle-variant/app/src/test/cpp/: app_test.cpp
Week7/grtest/: settings.gradle.kts
Week7/grtest/app/: build.gradle.kts
Week7/grtest/app/src/main/cpp/: app.cpp
Week7/grtest/app/src/main/headers/: app.h
Week7/grtest/app/src/test/cpp/: app_test.cpp
